--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--==================== UNICONS ====================-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css" />
     <!--==================== CSS ====================-->
-    <link rel="stylesheet" href="./res/css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
@@ -78,7 +78,7 @@
     </a>
 
     <!--==================== MAIN JS ====================-->
-    <script src="./res/js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
