--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">Visteon</a>
+            <div>
+                <h3 class="section__title">Engineering App Status</h3>
+            </div>
             <div class="nav__btns">
                 <!-- Theme change button -->
                 <i class="uil uil-moon change-theme" id="theme-button"></i>
@@ -34,8 +37,7 @@
         <section class="services section" id="services">
             <div class="services__container container">
                 <div>
-                    <h2 class="section__topic">Engineering App Status</h2>
-                    <span class="section__subtitle" style="margin-bottom: 3rem;">URL Check</span>
+
 
                     <div id="data-output" class="grid">
                     </div>
