--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">Visteon</a>
+            <!-- <a href="#" class="nav__logo">Visteon</a> -->
+            <img src="logo.png" style="width: 6rem;">
             <div>
                 <h3 class="section__title">Engineering App Status</h3>
             </div>
@@ -52,7 +53,8 @@
         <div class="footer__bg">
             <div class="footer__container container grid">
                 <div>
-                    <h1 class="footer__title">Visteon</h1>
+                    <!-- <h1 class="footer__title">Visteon</h1> -->
+                    <img src="logo.png" style="width: 45%;filter: brightness(0) invert(1)"><br/>
                     <span class="footer__subtitle">Car electronics Solution</span>
                 </div>
                 <div class="footer__socials">
