--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
             <div class="footer__container container grid">
                 <div>
                     <!-- <h1 class="footer__title">Visteon</h1> -->
-                    <img src="logo.png" style="width: 45%;filter: brightness(0) invert(1)"><br/>
-                    <span class="footer__subtitle">Car electronics Solution</span>
+                    <img src="logo.png" style="width: 45%;filter: brightness(0) invert(1)">
                 </div>
                 <div class="footer__socials">
                     <a href="https://www.youtube.com/user/Visteon" target="_blank" class="footer__social">
