--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     <!--==================== FOOTER ====================-->
     <footer class="footer">
         <div class="footer__bg">
-            <div class="footer__container container grid">
+<!--             <div class="footer__container container grid">
                 <div>
-                    <!-- <h1 class="footer__title">Visteon</h1> -->
+                    <h1 class="footer__title">Visteon</h1>
                     <img src="logo.png" style="width: 45%;filter: brightness(0) invert(1)">
                 </div>
                 <div class="footer__socials">
@@ -67,7 +67,7 @@
                         <i class="uil uil-linkedin"></i>
                     </a>
                 </div>
-            </div>
+            </div>  -->
 
             <p class="footer__copy">
                 &#169; Visteon Corporation. All rights reserved.
